--- a/Swift-Vending-Android/app/src/main/res/values/strings.xml
+++ b/Swift-Vending-Android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <!--<string name="app_name">Vending Machine</string>-->
+    <string name="app_name">Vending Machine</string>
     <string name="login">Login</string>
     <string name="login_dialog">Login</string>
     <string name="btn1_name">Order</string>
@@ -36,5 +36,11 @@
     <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
     <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
     <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage </string>
+
+
+    <!-- Preference File String --> preference_file_key
+    <string name="preference_file_key">pfk1234</string>
+    <string name="sessionID">sessionID</string>
+    <string name="userID">userID</string>
 
 </resources>
